mpd: Change files location
-Save necessary files on ~/.local/share/mpd
-Log messages in syslog

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,8 +1,12 @@
-pid_file "~/.config/mpd/mpd.pid"
-db_file "~/.config/mpd/mpd.db"
-state_file "~/.config/mpd/mpdstate"
+db_file "~/.local/share/mpd/database"
+
+log_file "syslog"
+
+music_directory "~/Music"
+
+state_file "~/.local/share/mpd/state"
+sticker_file "~/.local/share/mpd/sticker.sql"
 playlist_directory "~/Music/playlists"
-music_directory "~/Music/"
 
 auto_update "yes"
 
